Mobile Is Better

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <main>
             <a href="video1.html"><video width="320" height="240" controls="" id="video-top-left"><source src="dog.mp4" type="video/mp4"></video></a>
             <a href="video2.html"><video width="320" height="240" controls="" class="videos"><source src="dog.mp4" type="video/mp4"></video></a>
-            <a href="video3.html"><video width="320" height="240" controls="" class="videos"><source src="dog.mp4" type="video/mp4"></video></a>
+            <a href="video3.html"><video width="320" height="240" controls="" id="videos1"><source src="dog.mp4" type="video/mp4"></video></a>
             <a href="video4.html"><video width="320" height="240" controls="" class="videos"><source src="dog.mp4" type="video/mp4"></video></a>
             <a href="https://cornhub.website/"><img src="FakeAdd.png" alt="video" width="370" height="208" class="add"></img></a>
             <a href="https://youtu.be/QtBDL8EiNZo" id="more"><h1 id="hyperlink">More Videos</h1></a>
